--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -1,59 +1,205 @@
 body {
-    font-family: 'Lato', sans-serif;
-    color: 	#505050;
+    font-family: 'Poppins', sans-serif;
+    color: #505050;
 }
-p{font-size: 1.2em;}
 
-.section{padding: 100px 0;}
-
-.skillsSection{
-    color:white;
-    background-color: #2980b9;  
+p {
+    font-size: 1em;
 }
-.skill{text-align: center; margin-left: 10px;}
-.chart{
+
+.section {
+    padding: 100px 0;
+}
+
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.spinner {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 100px;
+    height: 100px;
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
+    animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+
+.copyrightSection {
+    background-color: #2a2a2a;
+    color: #fff;
+    padding: 30px 5px;
+}
+
+.copyrightSection p {
+    margin: 0
+}
+
+/*Nav Area*/
+
+#navigation {
+    background-color: #2980b9;
+    padding: 20px 10px;
+    z-index: 50;
+    width: 100%;
+}
+
+#navigation li a,
+.navbar-brand,
+.navbar-brand:hover {
+    color: #fff;
+}
+
+.fixedNav #navigation {
+    position: fixed;
+    top: 0;
+}
+
+.toggle {
+    font-weight: 700;
+    font-size: 1.3em;
+    color: #fff;
+}
+
+/*Stats Area*/
+.squareItem {
+    margin-top: 30px;
+    position: relative;
+}
+
+.squareInnerContainer {
+    position: relative;
+    padding: 50px 15px 35px;
+    text-align: center;
+    border: 2px solid #444;
+    border-top: none;
+}
+
+.squareInnerContainer:before,
+.squareInnerContainer:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 30px;
+    border-bottom: 2px solid #444;
+}
+
+.squareInnerContainer:before {
+    right: 0px;
+}
+
+.squareInnerContainer:after {
+    left: 0px;
+}
+
+.squareContent h2 {
+    font-size: 56px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    color: #2980b9;
+}
+
+.squareContent h3 {
+    font-size: 13px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.squareIcon {
+    position: absolute;
+    left: 50%;
+    top: -30px;
+    width: 40%;
+    height: 60px;
+    font-size: 45px;
+    margin-left: -20%;
+    color: #444;
+}
+
+/*Skills Area*/
+.skillsSection {
+    color: white;
+    background-color: #2980b9;
+}
+
+.skill {
+    text-align: center;
+    margin-left: 10px;
+}
+
+.chart {
     position: relative;
     width: 152px;
     height: 152px;
     display: inline-block;
     text-align: center;
-    
+
 }
 
-.chart canvas{
+.chart canvas {
     position: absolute;
     left: 0;
     top: 0;
 }
 
-.chart .percent{
+.chart .percent {
     color: white;
     line-height: 152px;
     display: inline-block;
     font-size: 2em;
 }
 
-.chart .percent:after{
+.chart .percent:after {
     content: '%';
 }
 
-.aboutImg
-{
+.aboutImg {
     max-width: 100%;
 }
 
+/*Header Area*/
 .header-area {
-    height: 100vh;
     background-color: grey;
-    background-image: url(../imgs/slide1.jpg);
-
 }
 
 .titleMessage {
     position: absolute;
     width: 100%;
     height: 250px;
-    top: 50%;
+    top: 55%;
     z-index: 5;
     text-align: center;
     margin-top: -125px;
@@ -62,19 +208,17 @@ p{font-size: 1.2em;}
 .titleMessage .heading p {
     color: #fff;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
-    font-weight: 100;
+    font-weight: 200;
     letter-spacing: 7px;
 }
 
 .titleMessage .heading .main {
-    font-size: 4em;
+    font-size: 3.5em;
 }
 
 .titleMessage .heading .sub {
-    font-size: 2em;
+    font-size: 1.8em;
 }
-
-
 
 .overlay {
     width: 100%;
@@ -108,47 +252,85 @@ p{font-size: 1.2em;}
 }
 
 
-
-
-
-
-
 /*Mouse Scroll*/
 .mouse {
-	max-width: 1.8rem;
-	width: 100%;
-	height: auto;
+    max-width: 1.8rem;
+    width: 100%;
+    height: auto;
 
 }
 
 .scroll {
-	animation-name: scroll;
-	animation-duration: 1.5s;
-	animation-timing-function: cubic-bezier(0.650, -0.550, 0.250, 1.500);
-	animation-iteration-count: infinite;
-	transform-origin: 50% 20.5px;
-	will-change: transform, opacity;
-	opacity: 1;
+    animation-name: scroll;
+    animation-duration: 1.5s;
+    animation-timing-function: cubic-bezier(0.650, -0.550, 0.250, 1.500);
+    animation-iteration-count: infinite;
+    transform-origin: 50% 20.5px;
+    will-change: transform, opacity;
+    opacity: 1;
 
 }
 
 .scroll-link {
-	position: absolute;
-	bottom: 2rem;
-	left: 50%;
-	transform: translateX(-50%);
+    position: absolute;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 8;
 }
 
 @keyframes scroll {
 
-	0%, 20% {
-		transform: translateY(0) scaleY(1);
-	}
+    0%,
+    20% {
+        transform: translateY(0) scaleY(1);
+    }
 
-	100% {
-		transform: translateY(36px) scaleY(2);
-		opacity: 0;
-	}
+    100% {
+        transform: translateY(36px) scaleY(2);
+        opacity: 0;
+    }
+
+}
+
+/*Media Queries*/
+@media (max-width: 991.98px){
+    .header-area {
+    height: auto;
+    }
+    #slides{height: 50vh !important;}
+    .mouse,.scroll .scroll-link {display: none;}
+    
+.titleMessage .heading .main {
+    font-size: 2.5em;
+}
+
+.titleMessage .heading .sub {
+    font-size: 1.5em;
+}
+    
+.titleMessage {
+    top: 70%;
+    }
+    
+    .section{padding: 20px 0;}
+}
+
+@media (max-width: 650.98px){
+
+    
+.titleMessage .heading .main {
+    font-size: 2.3em;
+}
+
+.titleMessage .heading .sub {
+    font-size: 1.4em;
+}
+    
+.titleMessage {
+    top: 75%;
+    }
+    
+    .slides-navigation{display: none;}
 
 }
